# microblog

./: pyproject.toml
app/: routes.py
app/templates/: base.html  index.html
